{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 50,
  "lineage": "46f6a27a-2cac-ccf4-b104-725690417cba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561766059965:vpc/vpc-03a2dc5c29a90369a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0106ac5bfd0f665d5",
            "default_route_table_id": "rtb-03daff583d60ad811",
            "default_security_group_id": "sg-0aad7e09c698479f4",
            "dhcp_options_id": "dopt-0a5069e9a0413505a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a2dc5c29a90369a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03daff583d60ad811",
            "owner_id": "561766059965",
            "tags": {
              "Name": "dev-ec-orange-clc-terraform-np-clc"
            },
            "tags_all": {
              "Name": "dev-ec-orange-clc-terraform-np-clc"
            }
          }
        }
      ]
    },
    {
      "module": "module.bastion_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecorange-testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00bb6a80f01f03502",
            "arn": "arn:aws:ec2:ap-south-1:561766059965:instance/i-0c3fe0e4b3e1e6bae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bd71011a7c580fdf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3fe0e4b3e1e6bae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prajwol-clc-np",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c05a9bd7e082a7ef"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c05a9bd7e082a7ef",
            "private_dns": "ip-10-0-26-66.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.26.66",
            "public_dns": "ec2-52-66-208-249.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.208.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03845daa833b3a2f8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08923ea04037ac965",
            "tags": {
              "Name": "dev-ec-orange-clc-terraform-bastion"
            },
            "tags_all": {
              "Name": "dev-ec-orange-clc-terraform-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b2c4f45f9b9d2cb"
            ]
          },
          "dependencies": [
            "aws_vpc.main",
            "module.bastion_server.aws_network_interface.bastion_ni",
            "module.bastion_server.aws_security_group.sg",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_server",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "bastion_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561766059965:network-interface/eni-0c05a9bd7e082a7ef",
            "id": "eni-0c05a9bd7e082a7ef",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:86:ef:35:13:a9",
            "owner_id": "561766059965",
            "private_dns_name": "ip-10-0-26-66.ap-south-1.compute.internal",
            "private_ip": "10.0.26.66",
            "private_ip_list": [
              "10.0.26.66"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.26.66"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06b2c4f45f9b9d2cb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08923ea04037ac965",
            "tags": {
              "Name": "dev-ec-orange-clc-terraform-ni-bastion"
            },
            "tags_all": {
              "Name": "dev-ec-orange-clc-terraform-ni-bastion"
            }
          },
          "dependencies": [
            "aws_vpc.main",
            "module.bastion_server.aws_security_group.sg",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561766059965:security-group/sg-06b2c4f45f9b9d2cb",
            "description": "security group to allow inbound/outbound from the VPC",
            "egress": [],
            "id": "sg-06b2c4f45f9b9d2cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-ec-orange-clc-terraform-bastion-sg",
            "name_prefix": "",
            "owner_id": "561766059965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Nmae": "dev-ec-orange-clc-terraform-bastion-sg"
            },
            "tags_all": {
              "Nmae": "dev-ec-orange-clc-terraform-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a2dc5c29a90369a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4107284657",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06b2c4f45f9b9d2cb",
            "security_group_rule_id": "sgr-01089c9d983f07001",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.bastion_server.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561766059965:route-table/rtb-05670d9a8c7e71244",
            "id": "rtb-05670d9a8c7e71244",
            "owner_id": "561766059965",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-ec-orange-clc-terraform-private-route-table"
            },
            "tags_all": {
              "Name": "dev-ec-orange-clc-terraform-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a2dc5c29a90369a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0554370d8adff9c8b",
            "route_table_id": "rtb-05670d9a8c7e71244",
            "subnet_id": "subnet-0327a23b10ac70cce"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.private_subnet.aws_route_table.private_route_table",
            "module.private_subnet.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561766059965:subnet/subnet-0327a23b10ac70cce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0327a23b10ac70cce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561766059965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ec-orange-clc-terraform-private-subnet"
            },
            "tags_all": {
              "Name": "dev-ec-orange-clc-terraform-private-subnet"
            },
            "vpc_id": "vpc-03a2dc5c29a90369a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561766059965:internet-gateway/igw-04a4462974568cf6b",
            "id": "igw-04a4462974568cf6b",
            "owner_id": "561766059965",
            "tags": {
              "Name": "dev-ec-orange-clc-terraform-igw"
            },
            "tags_all": {
              "Name": "dev-ec-orange-clc-terraform-igw"
            },
            "vpc_id": "vpc-03a2dc5c29a90369a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04a4462974568cf6b",
            "id": "r-rtb-0eb53a65927ac7f301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb53a65927ac7f30",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.public_subnet.aws_internet_gateway.ig",
            "module.public_subnet.aws_route_table.public_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561766059965:route-table/rtb-0eb53a65927ac7f30",
            "id": "rtb-0eb53a65927ac7f30",
            "owner_id": "561766059965",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a4462974568cf6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-ec-orange-clc-terraform-public-route-table"
            },
            "tags_all": {
              "Name": "dev-ec-orange-clc-terraform-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a2dc5c29a90369a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eadaf0437de186f6",
            "route_table_id": "rtb-0eb53a65927ac7f30",
            "subnet_id": "subnet-08923ea04037ac965"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.public_subnet.aws_route_table.public_route_table",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561766059965:subnet/subnet-08923ea04037ac965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08923ea04037ac965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561766059965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ec-orange-clc-terraform-public-subnet"
            },
            "tags_all": {
              "Name": "dev-ec-orange-clc-terraform-public-subnet"
            },
            "vpc_id": "vpc-03a2dc5c29a90369a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}